-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 13
-
Component/s: hotspot
-
b16
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275205 | 11.0.14-oracle | Kevin Walls | P3 | Resolved | Fixed | b02 |
| JDK-8260549 | 11.0.11 | David Holmes | P3 | Resolved | Fixed | b01 |
Test failed with following SEGV:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fe0ac70db89, pid=13217, tid=19403
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.713)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.713, mixed mode, sharing, tiered, compressed oops, concurrent mark sweep gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1366b89] os::PlatformEvent::unpark()+0x9
#
# Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1209/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a681e2c9-b2dc-40fd-8553-3c7ff4d63372/runs/4aa9ec4b-930a-4fb7-8787-324db94f089e/testOutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/core.13217
Current thread (0x00007fdff0317000): JavaThread "Thread-783" [_thread_in_native, id=19403, stack(0x00007fdf68d73000,0x00007fdf68e74000)]
Stack: [0x00007fdf68d73000,0x00007fdf68e74000], sp=0x00007fdf68e72098, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1366b89] os::PlatformEvent::unpark()+0x9
V [libjvm.so+0x1080753] JvmtiRawMonitor::raw_exit(Thread*)+0x53
V [libjvm.so+0x104df3b] JvmtiEnv::RawMonitorExit(JvmtiRawMonitor*)+0x8b
C [libJvmtiStressModule.so+0x1f8d] raw_monitor_exit+0x1d
V [libjvm.so+0x107315c] JvmtiExport::post_method_exit(JavaThread*, Method*, frame)+0x46c
V [libjvm.so+0xdad2ad] InterpreterRuntime::post_method_exit(JavaThread*)+0xed
j java.util.HashMap.hash(Ljava/lang/Object;)I+19 java.base@13-internal
j java.util.HashMap.get(Ljava/lang/Object;)Ljava/lang/Object;+2 java.base@13-internal
j spec.jbb.MapDataStorage.get(Ljava/lang/Object;)Ljava/lang/Object;+5
j spec.jbb.Warehouse.retrieveStock(I)Lspec/jbb/Stock;+8
j spec.jbb.DeliveryTransaction.preprocess()Z+248
J 5897 c2 spec.jbb.DeliveryTransaction.process()Z (84 bytes) @ 0x00007fe094c7f728 [0x00007fe094c7f260+0x00000000000004c8]
J 12449 c2 spec.jbb.TransactionManager.goManual(ILspec/jbb/TimerData;)J (146 bytes) @ 0x00007fe094ccae0c [0x00007fe094ccaa60+0x00000000000003ac]
J 10631% c2 spec.jbb.TransactionManager.go()V (694 bytes) @ 0x00007fe0955c5008 [0x00007fe0955c4e40+0x00000000000001c8]
j spec.jbb.JBBmain.run()V+62
J 12338 c1 java.lang.Thread.run()V java.base@13-internal (17 bytes) @ 0x00007fe08e1f65fc [0x00007fe08e1f6400+0x00000000000001fc]
v ~StubRoutines::call_stub
V [libjvm.so+0xdc324a] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6ea
V [libjvm.so+0xdc02bf] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x33f
V [libjvm.so+0xdc04da] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xca
V [libjvm.so+0xf03b11] thread_entry(JavaThread*, Thread*)+0x91
V [libjvm.so+0x16317da] JavaThread::thread_main_inner()+0x26a
V [libjvm.so+0x163a668] JavaThread::run()+0x218
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007fe0ac70db89, pid=13217, tid=19403
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-jdk13-jdk.713)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-jdk13-jdk.713, mixed mode, sharing, tiered, compressed oops, concurrent mark sweep gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x1366b89] os::PlatformEvent::unpark()+0x9
#
# Core dump will be written. Default location: /scratch/opt/mach5/mesos/work_dir/slaves/2dd962d0-8988-479b-a804-57ab764ada59-S1209/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/a681e2c9-b2dc-40fd-8553-3c7ff4d63372/runs/4aa9ec4b-930a-4fb7-8787-324db94f089e/testOutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java/scratch/0/core.13217
Current thread (0x00007fdff0317000): JavaThread "Thread-783" [_thread_in_native, id=19403, stack(0x00007fdf68d73000,0x00007fdf68e74000)]
Stack: [0x00007fdf68d73000,0x00007fdf68e74000], sp=0x00007fdf68e72098, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1366b89] os::PlatformEvent::unpark()+0x9
V [libjvm.so+0x1080753] JvmtiRawMonitor::raw_exit(Thread*)+0x53
V [libjvm.so+0x104df3b] JvmtiEnv::RawMonitorExit(JvmtiRawMonitor*)+0x8b
C [libJvmtiStressModule.so+0x1f8d] raw_monitor_exit+0x1d
V [libjvm.so+0x107315c] JvmtiExport::post_method_exit(JavaThread*, Method*, frame)+0x46c
V [libjvm.so+0xdad2ad] InterpreterRuntime::post_method_exit(JavaThread*)+0xed
j java.util.HashMap.hash(Ljava/lang/Object;)I+19 java.base@13-internal
j java.util.HashMap.get(Ljava/lang/Object;)Ljava/lang/Object;+2 java.base@13-internal
j spec.jbb.MapDataStorage.get(Ljava/lang/Object;)Ljava/lang/Object;+5
j spec.jbb.Warehouse.retrieveStock(I)Lspec/jbb/Stock;+8
j spec.jbb.DeliveryTransaction.preprocess()Z+248
J 5897 c2 spec.jbb.DeliveryTransaction.process()Z (84 bytes) @ 0x00007fe094c7f728 [0x00007fe094c7f260+0x00000000000004c8]
J 12449 c2 spec.jbb.TransactionManager.goManual(ILspec/jbb/TimerData;)J (146 bytes) @ 0x00007fe094ccae0c [0x00007fe094ccaa60+0x00000000000003ac]
J 10631% c2 spec.jbb.TransactionManager.go()V (694 bytes) @ 0x00007fe0955c5008 [0x00007fe0955c4e40+0x00000000000001c8]
j spec.jbb.JBBmain.run()V+62
J 12338 c1 java.lang.Thread.run()V java.base@13-internal (17 bytes) @ 0x00007fe08e1f65fc [0x00007fe08e1f6400+0x00000000000001fc]
v ~StubRoutines::call_stub
V [libjvm.so+0xdc324a] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x6ea
V [libjvm.so+0xdc02bf] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x33f
V [libjvm.so+0xdc04da] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, Thread*)+0xca
V [libjvm.so+0xf03b11] thread_entry(JavaThread*, Thread*)+0x91
V [libjvm.so+0x16317da] JavaThread::thread_main_inner()+0x26a
V [libjvm.so+0x163a668] JavaThread::run()+0x218
- backported by
-
JDK-8260549 SIGSEGV in os::PlatformEvent::unpark() in JvmtiRawMonitor::raw_exit while posting method exit event
-
- Resolved
-
-
JDK-8275205 SIGSEGV in os::PlatformEvent::unpark() in JvmtiRawMonitor::raw_exit while posting method exit event
-
- Resolved
-
- relates to
-
JDK-8220093 Change to GCC 8.2 for building on Linux at Oracle
-
- Resolved
-