8221584: SIGSEGV in os::PlatformEvent::unpark() in JvmtiRawMonitor::raw_exit while posting method exit event

Co-authored-by: Stefan Karlsson <stefan.karlsson@oracle.com>
Reviewed-by: dholmes, dcubed